# resume-api

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
data/: demo.json
src/: main.rs
src/common/: request.rs  response.rs
