[package]
name = "resume-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
axum = { version = "0.7.4", features = ["macros"] }
tower-http = { version = "0.5.2", features = ["cors"] }
dotenv = "0.15.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tracing-subscriber = "0.3.18"
http = "1.0.0"

[profile.release]
codegen-units = 1
strip = true
lto = true
opt-level = "z"
